# wordio

./: README.md
backend/: Cargo.toml
backend/src/models/: posts.rs
frontend/: Cargo.toml
