[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
orchard = "0.4.0"
serde_json = "1.0.95"
uuid = "1.3.1"
zcash_primitives = "0.10.2"
